--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Identity by HTML5 UP
-	html5up.net | @n33co
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>Bagrat Kirakosian</title>
@@ -14,6 +9,9 @@
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+		<!-- .material-icons.md-dark { color: rgba(0, 0, 0, 0.54); } -->
 	</head>
 	<body class="is-loading">
 
@@ -27,10 +25,19 @@
 							<h1>Bagrat Kirakosian</h1>
 							<p>Software Engineer</p>
 						</header>
-						<h4>Location: Yerevan, Armenia</h4>
-						<h4>Email: <a href="mailto:bagratkirakosian@gmail.com">bagratkirakosian@gmail.com</a></h4>
-						<h4>Mobile: <a href="callto:+37493273405">+37493273405</a></h4>
+						<h2><i class="material-icons md-18">email</i> Email </h2>
+						<h4><a href="mailto:bagratkirakosian@gmail.com">bagratkirakosian@gmail.com</a></h4>
 						<br>
+						<h2><i class="material-icons md-18">phone_iphone</i> Mobile </h2>
+						<h4><a href="callto:+37493273405">+37493273405</a></h4>
+						<br>
+						<h2><i class="material-icons md-18">place</i> Location </h2>
+						<h4>Yerevan, Armenia</h4>
+						<br>
+
+						<!-- <h4>Email: <a href="mailto:bagratkirakosian@gmail.com">bagratkirakosian@gmail.com</a></h4> -->
+						<!-- <h4>Mobile: <a href="callto:+37493273405">+37493273405</a></h4> -->
+						<!-- <br> -->
 			<!-- 			
 						<hr />
 						<h2>Extra Stuff!</h2>
@@ -80,7 +87,8 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="copyright">
-							<li>&copy; Bagrat kirakosian</li><!-- <li>Design: <a href="http://html5up.net">HTML5 UP</a></li> -->
+							<li>&copy; Bagrat kirakosian</li>
+							<!-- <li>Design: <a href="http://html5up.net">HTML5 UP</a></li> -->
 						</ul>
 					</footer>
 
