Stack Overflow Button

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
 						<footer>
 							<ul class="icons">
 								<li><a href="https://github.com/bagratkirakosian" class="fa-github" target="blank">Github</a></li>
+								<li><a href="http://stackoverflow.com/users/1148020/bagrat-kirakosian" class="fa-stack-overflow" target="blank">Stack Overflow</a></li>
 								<li><a href="https://www.linkedin.com/in/bagratkirakosian" class="fa-linkedin" target="blank">LinkedIn</a></li>
 								<!-- <li><a href="#" class="fa-facebook">Facebook</a></li> -->
 							</ul>
