--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 						<footer>
 							<ul class="icons">
 								<li><a href="https://github.com/bagratkirakosian" class="fa-github" target="blank">Github</a></li>
-								<li><a href="http://stackoverflow.com/users/1148020/bagrat-kirakosian" class="fa-stack-overflow" target="blank">Stack Overflow</a></li>
+								<li><a href="https://stackoverflow.com/users/1148020/bagrat-kirakosian" class="fa-stack-overflow" target="blank">Stack Overflow</a></li>
 								<li><a href="https://www.linkedin.com/in/bagratkirakosian" class="fa-linkedin" target="blank">LinkedIn</a></li>
 								<!-- <li><a href="#" class="fa-facebook">Facebook</a></li> -->
 							</ul>
@@ -89,7 +89,6 @@
 					<footer id="footer">
 						<ul class="copyright">
 							<li>&copy; Bagrat kirakosian</li>
-							<!-- <li>Design: <a href="http://html5up.net">HTML5 UP</a></li> -->
 						</ul>
 					</footer>
 
